@@ -2,10 +2,12 @@
         ADDED - USEICONSCALE - colorize icon images (based on patches from llow)
 	FIXED - KEYOUTLINECOLOR is actually used now (thanks again to llow)
         ADDED - a basic 'live view' function which generates a map on demand.
+	FIXED - Editor doesn't throw away WIDTH and HEIGHT with no BG image
 
 0.941	FIXED - Issue with '-' DS names again.
 	FIXED - Added extra code to help discourage browser caching.
 	FIXED - Removed some extra chatty debugging code from poller_output.
+	ADDED - Page titles are more useful in Cacti now
 
 0.94    ADDED - INBWFORMAT and OUTBWFORMAT allow you to format the text for BWLABEL, same as for COMMENTs
         ADDED - New cactithold/cactimonitor data source plugin reads data from Cacti's Threshold plugin.
